//Version
syntax = "proto3";

//Package
option go_package = "github.com/thanchayawikgithub/hello-sekai-shop";

// Struct
message AccessTokenSearchReq {
  string access_token = 1;
  string refresh_token = 2;
}

message AccessTokenSearchRes {
  bool is_valid = 1;
}

message RolesCountReq {}

message RolesCountRes {
  int64 count = 1;
}

//Methods
service AuthGrpcService {
  rpc AccessTokenSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes) {}
  rpc RolesCount(RolesCountReq) returns (RolesCountRes) {}
}
